[tool.poetry]
name = "pytest_docker_tools"
version = "1.0.0"
description = "Docker integration tests for pytest"
authors = ["John Carr <john.carr@unrouted.co.uk>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/Jc2k/pytest-docker-tools"
keywords = ["devops", "docker", "pytest"]
classifiers=[
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta"
]

[tool.poetry.dependencies]
python = "^3.6.1"
pytest = "^6.0.1"
docker = "^4.3.1"

[tool.poetry.plugins."pytest11"]
docker_tools = "pytest_docker_tools.plugin"

[tool.poetry.dev-dependencies]
isort = "^5.5.1"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest-cov = "^2.10.1"
pyupgrade = "^2.7.2"
codecov = "^2.1.9"
pytest-markdown = "^1.0.0"

[tool.black]
target-version = ["py36", "py37", "py38"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = "true"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "pytest_docker_tools,tests"
forced_separate = "tests"
combine_as_imports = "true"
extra_standard_library = "_socket"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
