[project]
authors = [
    {name = "John Carr", email = "john.carr@unrouted.co.uk"},
]
license = {text = "Apache-2.0"}
requires-python = "<4.0.0,>=3.9.0"
dependencies = [
    "pytest>=6.0.1",
    "docker>=4.3.1",
]
name = "pytest_docker_tools"
description = "Docker integration tests for pytest"
readme = "README.md"
keywords = [
    "devops",
    "docker",
    "pytest",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
]
version = "3.1.4"

[project.urls]
homepage = "https://github.com/Jc2k/pytest-docker-tools"

[project.entry-points.pytest11]
docker_tools = "pytest_docker_tools.plugin"

[dependency-groups]
dev = [
    "pytest-cov<3.0.0,>=2.10.1",
    "codecov<3.0.0,>=2.1.9",
    "pytest-markdown<2.0.0,>=1.0.0",
    "pytest-xdist<3.0.0,>=2.2.1",
    "coverage[toml]<7.0.0,>=6.3.1",
    "ruff>=0.10.0",
    "pre-commit==3.7.1",
    "pre-commit-hooks==4.6.0",
    "codespell==2.3.0",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.setuptools]
include-package-data = true
packages = ["pytest_docker_tools"]
platforms = ["any"]
zip-safe = false

[tool.distutils.bdist_wheel]
universal = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
